fix(fab): Restore horizontal alignment in IE11

--- a/packages/mdc-fab/_mixins.scss
+++ b/packages/mdc-fab/_mixins.scss
@@ -60,6 +60,7 @@ $mdc-fab-icon-enter-duration_: 180ms;
 
   display: inline-flex;
   position: relative;
+  align-items: center;
   justify-content: center;
   box-sizing: border-box;
   width: 56px;
@@ -122,7 +123,9 @@ $mdc-fab-icon-enter-duration_: 180ms;
 }
 
 @mixin mdc-fab__icon_ {
-  margin: auto;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   transition: mdc-animation-enter(transform, $mdc-fab-icon-enter-duration_, $mdc-fab-icon-enter-delay_);
   fill: currentColor;
   will-change: transform;
